# django-cloud-celery

./: .gitignore  Dockerfile  Makefile  README.md  cloudbuild-ci.yaml  deploy.sh  manage.py  pyproject.toml
django_cloud_celery/: __init__.py  cloud_celery.py  task.py  views.py
poc_gcp_django/: asgi.py  cloud_celery.py  settings.py  urls.py  wsgi.py
tasks/: tasks.py  urls.py  views.py
